--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/geometric_shapes
-	previous = 
-	base = 0085f802b6a0
+	previous = 0085f802b6a0
+	base = 72fcc9ee7037
 	trim = 
 	trimbase = 
