--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/geometric_shapes
+	parent = release/rolling/geometric_shapes/2.1.3-4
 	previous = 0085f802b6a0
 	base = dcae61bee7e4
 	trim = 
